# Structures-FEA

./: .gitignore
.github/workflows/: ci-matrix.yml  release-signoff.yml  windows-build.yml
structures-fea-ann/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
structures-fea-ann/docs/: pino-legacy-rollback.md  release-signoff-checklist.md  validation-pack.md
structures-fea-ann/docs/baselines/: benchmark-lock.json  pino-regression-gates.json  pino-signoff-lock.json
structures-fea-ann/plans/: BENCHMARK_CANTILEVER_DISPLACEMENT_PRIMARY_EXECUTION.md  BENCHMARK_FIRST_PINO_RESET_PLAN.md  DIRECT_REPLACE_PINO_UPGRADE_PLAN.md  FEA_ANN_MASTER_PLAN.md  FEA_ANN_PROFESSIONALIZATION_PLAN.md  PINO_3D_RECOVERY_PLAN.md  PINO_ARCHITECTURE_BASELINE.md  PINO_LBFGS_DENSE_GRADIENT_PLAN.md  UNIVERSAL_PINN_REPLACEMENT_PLAN.md  UPGRADE_EXECUTION_PROGRESS.md
structures-fea-ann/scripts/: generate-benchmark-diff.mjs  run-benchmark-profile.sh  run-headless-training.sh  run-pino-regression-gates.sh  run-pino-signoff-profile.sh  verify-benchmark-lock.mjs  verify-offline.mjs  verify-pino-regression-gates.mjs  verify-pino-signoff-lock.mjs  verify-ui-budgets.mjs
structures-fea-ann/src/: app.css  app.d.ts  app.html
structures-fea-ann/src-tauri/: Cargo.toml  tauri.conf.json
structures-fea-ann/src-tauri/capabilities/: default.json
structures-fea-ann/src-tauri/src/: benchmarks.rs  contracts.rs  main.rs  pinn.rs  pinn_burn.rs  pino.rs  pino_burn_head.rs
structures-fea-ann/src-tauri/src/ann/: mod.rs
structures-fea-ann/src-tauri/src/fem/: mod.rs
structures-fea-ann/src-tauri/src/io/: mod.rs
structures-fea-ann/src-tauri/src/physics/: dynamic.rs  failure.rs  mod.rs  stress.rs  thermal.rs
structures-fea-ann/tests/: repo-hardening.test.mjs
(+12 files in other folders)
