[package]
name = "structures-fea-ann"
version = "0.1.0"
description = "Offline 3D Plate FEA + Adaptive ANN Desktop"
authors = ["Structures FEA Team"]
edition = "2021"
default-run = "structures-fea-ann"

[[bin]]
name = "structures-fea-ann"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.32"
rand = "0.8"

[features]
default = ["tauri/default"]
