[package]
name = "structures-fea-ann"
version = "0.1.0"
description = "Offline 3D Plate FEA + Adaptive ANN Desktop"
authors = ["Structures FEA Team"]
edition = "2021"
default-run = "structures-fea-ann"

[[bin]]
name = "structures-fea-ann"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.32"
rand = "0.8"
bincode = "=2.0.0-rc.3"
burn = { version = "0.13", default-features = false, features = ["train"], optional = true }
burn-autodiff = { version = "0.13", optional = true }
burn-candle = { version = "0.13", optional = true }
burn-ndarray = { version = "0.13", optional = true }
rayon = "1"

[features]
default = ["tauri/default", "pino-ndarray-cpu"]
pino-core = ["dep:burn", "dep:burn-autodiff"]
pino-candle = ["pino-core", "dep:burn-candle"]
pino-candle-cpu = ["pino-candle"]
pino-candle-cuda = ["pino-candle"]
pino-candle-metal = ["pino-candle"]
pino-ndarray-cpu = ["pino-core", "dep:burn-ndarray"]
